# mcp_odoo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEV_COMMANDS.md  README.md  agents.json  config.template.json  pyproject.toml  rewrite_of_agentic_tool_odoo.md  webapp.py
.github/agents/: accountant.agent.md  coder-tester.agent.md  cs.agent.md  logistics.agent.md  maintainer.agent.md  purchaser.agent.md  qa.agent.md  salesman.agent.md
config/: agents.json  config.template.json
config/schemas/: account_journal.json  account_move.json  account_move_line.json  account_payment.json  crm_lead.json  product_supplierinfo.json  purchase_order.json  purchase_order_line.json  res_partner.json  sale_order.json  sale_order_line.json  spreadsheet_template.json  stock_picking.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MCP_SETUP.md
docs/knowledgebase/: CHANGELOG.md
docs/visual_reports/: architecture.html  setup.html
installer/: wizard.py
scripts/: build_dmg.sh  run_schema_discovery.py  run_schema_enrichment.py
static/: app.js  styles.css
templates/: index.html
tests/: test_analytics_operations.py  test_config.py  test_date_utils.py  test_delete_operations.py  test_integration.py  test_mcp_server.py  test_mcp_tools_v2.py  test_odoo_client.py  test_operations.py  test_path_resolution.py  test_qa_edge_cases.py  test_record_urls.py  test_router.py  test_schema_discovery.py  test_schema_enrichment.py  test_schema_store.py  test_service_locator.py  test_session_store.py  test_transport.py  test_types.py  test_update_operations.py  test_wizard.py
(+54 files in other folders)
